--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@fullcalendar/core": "^6.0.3",
-    "@fullcalendar/daygrid": "^6.0.3",
-    "@fullcalendar/list": "^6.0.3",
-    "@fullcalendar/timegrid": "^6.0.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@mui/x-data-grid": "^5.17.19",
@@ -17,8 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
